Add pom.xml and Main class